[feat] added tranlations to Spanish

--- a/SimpleMusic/en.lproj/Localizable.strings
+++ b/SimpleMusic/en.lproj/Localizable.strings
@@ -1,3 +1,5 @@
 "Artists" = "Artists";
 "Please grant access to your media library in Settings to view artists." = "Please grant access to your media library in Settings to view artists.";
 "Request Access" = "Request Access";
+"Albums for %@" = "Albums for %@";
+"Songs in %@" = "Songs in %@";
